Table Overflow Fix

--- a/frontend_private/static/private/css/style.css
+++ b/frontend_private/static/private/css/style.css
@@ -2449,6 +2449,10 @@ span.flatpickr-weekday {
   min-width: fit-content;
 }
 
+.max-w-xl {
+  max-width: 36rem;
+}
+
 .max-w-2xl {
   max-width: 42rem;
 }
@@ -2485,8 +2489,12 @@ span.flatpickr-weekday {
   max-width: 24rem;
 }
 
-.max-w-xl {
-  max-width: 36rem;
+.max-w-xs {
+  max-width: 20rem;
+}
+
+.max-w-13 {
+  max-width: 13rem;
 }
 
 .flex-1 {
